unpackaged/main/default/objects/Opportunity/fields/Forecasted_ARR__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_ARR__c</fullName>
    <description>Forecasted ARR for MyCase Deals based on forecasted users and pricing tiers</description>
    <formula>(

CASE( Pricing_Tier__c,

&quot;Basic&quot;,

IF( TEXT(MyCase_Subscription_Type__c) = &quot;Annual&quot;, 39, 49),

&quot;Advanced&quot;, 

IF( TEXT(MyCase_Subscription_Type__c) = &quot;Annual&quot;, 79, 89), 


IF( TEXT(MyCase_Subscription_Type__c) = &quot;Annual&quot;, 59, 69) 

) * Forecasted_Users__c) * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zz Forecasted ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>