unpackaged/main/default/objects/Opportunity/fields/Forecasted_Close__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Close__c</fullName>
    <formula>IF( MONTH(CloseDate) = 12, 

DATE( YEAR(CloseDate), 12, 31),

DATE( YEAR(CloseDate), MONTH(CloseDate) + 1, 1) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted Close</label>
    <type>Date</type>
</CustomField>