unpackaged/main/default/objects/Opportunity/fields/Forecasted_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Close_Date__c</fullName>
    <description>Forecasting timing for your deal</description>
    <inlineHelpText>Adjust to forecast timing for your deal (defaults to close date of opportunity when created)</inlineHelpText>
    <label>Forecasted Close Date</label>
    <type>Date</type>
</CustomField>