unpackaged/main/default/objects/Opportunity/fields/Forecasted_MRR__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_MRR__c</fullName>
    <description>Multiplies forecasting users times the monthly price per user for the selected pricing tier</description>
    <formula>IF( Forecasted_Users__c &gt; 0,

CASE( Pricing_Tier__c,

&quot;Basic&quot;, 39 * Forecasted_Users__c,
59 * Forecasted_Users__c),

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zz Forecasted MRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>