unpackaged/main/default/objects/Opportunity/fields/Forecasted_Users__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Users__c</fullName>
    <description>Forecasted number of users for the firm for sales to enter during the sales process</description>
    <inlineHelpText>Forecasted number of users for the firm for sales to enter during the sales process</inlineHelpText>
    <label>Forecasted Users</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>