unpackaged/main/default/objects/Opportunity/fields/FP_Date_Change__c.field-meta.xml
<CustomField>
    <fullName>FP_Date_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to TRUE through flow if sales is changing the converted customer&#39;s FP date</description>
    <label>FP Date Change</label>
    <type>Checkbox</type>
</CustomField>