unpackaged/main/default/objects/Opportunity/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <description>PM, MC; R166115; Edited: Integration</description>
    <label>GCLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>