unpackaged/main/default/objects/Opportunity/fields/Gearset_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Gearset_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gearset Checkbox</label>
    <type>Checkbox</type>
</CustomField>