unpackaged/main/default/objects/Opportunity/fields/Has_Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Has_Referral_Partner__c</fullName>
    <formula>IF(
   ISBLANK( Referral_Partnership__c ),
   FALSE,
   TRUE
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays TRUE when there is a Referral Partner referenced on the opportunity.</inlineHelpText>
    <label>Has Referral Partner</label>
    <type>Checkbox</type>
</CustomField>