unpackaged/main/default/objects/Opportunity/fields/Has_Referral_with_Prohibited_Status__c.field-meta.xml
<CustomField>
    <fullName>Has_Referral_with_Prohibited_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opportunity has a referral record  that has Partner software Non-Compete Type = Outbound and inbound prohibited. Updated via a Flow</description>
    <label>Has Referral with Prohibited Status</label>
    <type>Checkbox</type>
</CustomField>