unpackaged/main/default/objects/Opportunity/fields/Has_Won_Payments__c.field-meta.xml
<CustomField>
    <fullName>Has_Won_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to calculate if the parent or non-parent Opportunity is &quot;Closed Won&quot; and has a payments Opportunity SKU. It is populated through a daily scheduled flow.</description>
    <label>Has Won Payments</label>
    <type>Checkbox</type>
</CustomField>