unpackaged/main/default/objects/Opportunity/fields/Historical_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Historical_Reduction__c</fullName>
    <description>Soluno field to help account for historical discounts to customers</description>
    <inlineHelpText>Reduction applied the Monthly Total to bring existing accounts to correct rate during Salesforce cutover</inlineHelpText>
    <label>Historical Reduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>