unpackaged/main/default/objects/Opportunity/fields/Implementation_Note__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Note__c</fullName>
    <label>Implementation Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>