unpackaged/main/default/objects/Opportunity/fields/Implementation_Partner__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>