unpackaged/main/default/objects/Opportunity/fields/In_Month_Expansion__c.field-meta.xml
<CustomField>
    <fullName>In_Month_Expansion__c</fullName>
    <formula>IF( AND( OR(Record_Type_Name__c = &quot;MyCase&quot;, Record_Type_Name__c = &quot;LawPay Software&quot;), OR( TEXT(StageName) = &quot;Closed Won&quot;, TEXT(StageName) = &quot;Approvals&quot; )),

IF( 
 AND( MONTH(TODAY()) = MONTH(CloseDate), YEAR(TODAY()) = YEAR(CloseDate)),

Product_Environment__r.Total_Users__c - Opportunity_SKU_License_Count__c , User_Expansion__c

),

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Month Expansion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>