unpackaged/main/default/objects/Opportunity/fields/Inbound_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Lead_Type__c</fullName>
    <description>Summarizes the type of inbound lead for NTIs</description>
    <label>Inbound Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Inbound_Lead_Type</valueSetName>
    </valueSet>
</CustomField>