unpackaged/main/default/objects/Opportunity/fields/Industry_Software__c.field-meta.xml
<CustomField>
    <fullName>Industry_Software__c</fullName>
    <label>Industry Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>