unpackaged/main/default/objects/Opportunity/fields/Initial_Sale_ARR__c.field-meta.xml
<CustomField>
    <fullName>Initial_Sale_ARR__c</fullName>
    <inlineHelpText>Woodpecker initial sale annual recurring revenue</inlineHelpText>
    <label>Initial Sale ARR</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>