unpackaged/main/default/objects/Opportunity/fields/Initial_Sale_MRR__c.field-meta.xml
<CustomField>
    <fullName>Initial_Sale_MRR__c</fullName>
    <inlineHelpText>Woodpecker initial sale monthly recurring revenue</inlineHelpText>
    <label>Initial Sale MRR</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>