unpackaged/main/default/objects/Opportunity/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the integration record associated with this opportunity</description>
    <label>Integration</label>
    <referenceTo>Integrations__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>