unpackaged/main/default/objects/Opportunity/fields/Integrations_Requested__c.field-meta.xml
<CustomField>
    <fullName>Integrations_Requested__c</fullName>
    <label>Integrations Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integrations_Requsted</valueSetName>
    </valueSet>
</CustomField>