unpackaged/main/default/objects/Opportunity/fields/Integrations_Requested_CASEpeer__c.field-meta.xml
<CustomField>
    <fullName>Integrations_Requested_CASEpeer__c</fullName>
    <description>CASEpeer Integrations requested</description>
    <inlineHelpText>CASEpeer Integrations Requested</inlineHelpText>
    <label>Integrations Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CASEpeer_Integrations</valueSetName>
    </valueSet>
</CustomField>