unpackaged/main/default/objects/Opportunity/fields/Is_Originating_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_Originating_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is populated upon Lead conversion or when an Opportunity is created from a Contact. It is used to calculate SDR and BDR commissions.</description>
    <label>Is Originating Opportunity</label>
    <type>Checkbox</type>
</CustomField>