unpackaged/main/default/objects/Opportunity/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <description>A primary Opportunity can either be a standalone Opportunity (in a single-product sale) or a parent Opportunity (in a multi-product sale). This is used in reporting and automation.</description>
    <formula>IF(
    ISBLANK(Related_Opportunity__c),
    TRUE,
    FALSE
)</formula>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>