unpackaged/main/default/objects/Opportunity/fields/Is_SQL__c.field-meta.xml
<CustomField>
    <fullName>Is_SQL__c</fullName>
    <formula>IF(
     Record_Type_Name__c = &quot;Parent&quot;,
     FALSE,
     TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is SQL</label>
    <type>Checkbox</type>
</CustomField>