unpackaged/main/default/objects/Opportunity/fields/Key_Migration_Data_Points__c.field-meta.xml
<CustomField>
    <fullName>Key_Migration_Data_Points__c</fullName>
    <label>Key Migration Data Points</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calendar</fullName>
            </value>
            <value>
                <fullName>Worker Assignments</fullName>
            </value>
            <value>
                <fullName>Documents</fullName>
            </value>
            <value>
                <fullName>Tasks</fullName>
            </value>
            <value>
                <fullName>Costs</fullName>
            </value>
            <value>
                <fullName>Client Trust</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>