unpackaged/main/default/objects/Opportunity/fields/Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page__c</fullName>
    <description>MC; Edited: Users</description>
    <label>Landing Page</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>