unpackaged/main/default/objects/Opportunity/fields/Last_MQL_Brand_Before_Opp_Create__c.field-meta.xml
<CustomField>
    <fullName>Last_MQL_Brand_Before_Opp_Create__c</fullName>
    <description>Last MQL Brand Before Opportunity Create comes from the Lead or Contact</description>
    <inlineHelpText>Last MQL Brand Before Opportunity Create comes from the Lead or Contact</inlineHelpText>
    <label>Last MQL Brand Before Opp Create</label>
    <length>50</length>
    <type>Text</type>
</CustomField>