unpackaged/main/default/objects/Opportunity/fields/Last_MQL_Date_Before_Opportunity_Create__c.field-meta.xml
<CustomField>
    <fullName>Last_MQL_Date_Before_Opportunity_Create__c</fullName>
    <label>Last MQL Date Before Opportunity Create</label>
    <type>DateTime</type>
</CustomField>