unpackaged/main/default/objects/Opportunity/fields/Last_MQL_Type_Before_Opportunity_Create__c.field-meta.xml
<CustomField>
    <fullName>Last_MQL_Type_Before_Opportunity_Create__c</fullName>
    <description>When Opportunity is created from contact or lead conversion Last MQL Type Before Opportunity Create will populate from Last MQL Type</description>
    <label>Last MQL Type Before Opportunity Create</label>
    <length>200</length>
    <type>Text</type>
</CustomField>