unpackaged/main/default/objects/Opportunity/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last Name of person starting trial when created from SFDC</description>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>