unpackaged/main/default/objects/Opportunity/fields/Last_Touch_Automation__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Automation__c</fullName>
    <label>Last Touch Automation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>