unpackaged/main/default/objects/Opportunity/fields/Last_Touch_Program__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Program__c</fullName>
    <description>the marketing program that was responsible for the last touch with the Lead</description>
    <inlineHelpText>the marketing program that was responsible for the last touch with the Lead</inlineHelpText>
    <label>Last Touch Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>