unpackaged/main/default/objects/Opportunity/fields/Law_Firm_Growth_Bundles__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Growth_Bundles__c</fullName>
    <description>NEW: Select which features the firm is taking advantage of in the Law Firm Growth Bundle (MyCase Annual Advanced, Accounting, Woodpecker, LawPay)</description>
    <inlineHelpText>Select all products the firm will use in the Law Firm Growth Bundle.</inlineHelpText>
    <label>Law Firm Growth Bundle</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>LawPay</fullName>
            </value>
            <value>
                <fullName>Woodpecker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>