unpackaged/main/default/objects/Opportunity/fields/LawPay_6QA__c.field-meta.xml
<CustomField>
    <fullName>LawPay_6QA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be populated at opportunity creation if Account has LawPay 6QA selected.  This is for 6sense tracking.</description>
    <label>LawPay 6QA</label>
    <type>Checkbox</type>
</CustomField>