unpackaged/main/default/objects/Opportunity/fields/LawPay_Customer__c.field-meta.xml
<CustomField>
    <fullName>LawPay_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE if MyCase prospect is a LawPay customer for cross-sell reporting</description>
    <inlineHelpText>Check this box if the prospect is a LawPay customer</inlineHelpText>
    <label>zz LawPay Customer</label>
    <type>Checkbox</type>
</CustomField>