unpackaged/main/default/objects/Opportunity/fields/LawPay_Payments_Eligible_Sell_Software__c.field-meta.xml
<CustomField>
    <fullName>LawPay_Payments_Eligible_Sell_Software__c</fullName>
    <description>LawPay Payments Opportunity Eligible to sell Software To</description>
    <formula>IF(AND(Record_Type_Name__c= &quot;LawPay Payments&quot;, Referral_Partnership_Channel__c !=&quot;Tech Partner&quot;,
Docketwise_Customer_Status__c !=&quot;Active&quot;,  MyCase_Customer_Status__c != &quot;Active&quot;, CASEpeer_Customer_Status__c != &quot;Active&quot;),
&quot;Yes&quot;, &quot;No&quot;)</formula>
    <inlineHelpText>LawPay Payments Opportunity Eligible to sell Software To</inlineHelpText>
    <label>LawPay Payments Eligible Sell Software</label>
    <type>Text</type>
</CustomField>