unpackaged/main/default/objects/Opportunity/fields/LawPay_Product_Tier__c.field-meta.xml
<CustomField>
    <fullName>LawPay_Product_Tier__c</fullName>
    <description>Stamped from Account when Opportunity is Created</description>
    <inlineHelpText>Stamped from Account when Opportunity is Created</inlineHelpText>
    <label>LawPay Product Tier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>