unpackaged/main/default/objects/Opportunity/fields/LawPay_Rep__c.field-meta.xml
<CustomField>
    <fullName>LawPay_Rep__c</fullName>
    <description>Name of LawPay Rep who sent lead</description>
    <label>LawPay Rep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>