unpackaged/main/default/objects/Opportunity/fields/Lead_Channel__c.field-meta.xml
<CustomField>
    <fullName>Lead_Channel__c</fullName>
    <formula>TEXT( Primary_Contact__r.Lead_Channel__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lead Channel as captured on the Primary Contact record</inlineHelpText>
    <label>Lead Channel</label>
    <type>Text</type>
</CustomField>