unpackaged/main/default/objects/Opportunity/fields/Legacy_Created__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Created__c</fullName>
    <description>Flags opp as legacy created in wrong month</description>
    <formula>IF( 

AND( DATEVALUE(CreatedDate) &gt;= DATE(2023,04,01), DATEVALUE(CreatedDate) &lt;= DATE(2023,04,30), 

OR( AffiniPay_ID__c != &quot;&quot;, MyCase_ID__c != &quot;&quot;,  CASEPeer_ID__c != &quot;&quot;,  Woodpecker_ID__c != &quot;&quot;,  Docketwise_ID__c != &quot;&quot;)),

TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Flags opp as legacy created in wrong month</inlineHelpText>
    <label>Legacy Created</label>
    <type>Checkbox</type>
</CustomField>