unpackaged/main/default/objects/Opportunity/fields/Legacy_Notes__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Notes__c</fullName>
    <inlineHelpText>Notes that were imported from legacy systems</inlineHelpText>
    <label>Legacy Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>