unpackaged/main/default/objects/Opportunity/fields/Legacy_Software__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Software__c</fullName>
    <label>Legacy Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Captorra</fullName>
            </value>
            <value>
                <fullName>LeadDocket</fullName>
            </value>
            <value>
                <fullName>Alert Communications</fullName>
            </value>
            <value>
                <fullName>ApexChat</fullName>
            </value>
            <value>
                <fullName>Ngage Live Chat</fullName>
            </value>
            <value>
                <fullName>Client Chat Live</fullName>
            </value>
            <value>
                <fullName>Dropbox</fullName>
            </value>
            <value>
                <fullName>OneDrive</fullName>
            </value>
            <value>
                <fullName>OneDrive for Business</fullName>
            </value>
            <value>
                <fullName>Calendar Rules</fullName>
            </value>
            <value>
                <fullName>Kenect</fullName>
            </value>
            <value>
                <fullName>Records on Time</fullName>
            </value>
            <value>
                <fullName>Case Status</fullName>
            </value>
            <value>
                <fullName>Multus Medical</fullName>
            </value>
            <value>
                <fullName>ChartSquad</fullName>
            </value>
            <value>
                <fullName>Soluno</fullName>
            </value>
            <value>
                <fullName>Mailchimp</fullName>
            </value>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
            <value>
                <fullName>LawPay</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>