unpackaged/main/default/objects/Opportunity/fields/LinkedIn_Click_ID__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Click_ID__c</fullName>
    <label>LinkedIn Click ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>