unpackaged/main/default/objects/Opportunity/fields/List_Monthly__c.field-meta.xml
<CustomField>
    <fullName>List_Monthly__c</fullName>
    <label>List Monthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>