unpackaged/main/default/objects/Opportunity/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <label>Live?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>