unpackaged/main/default/objects/Opportunity/fields/Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Live_Date__c</fullName>
    <description>Soluno Used. Date that unites go live</description>
    <label>Live Date</label>
    <type>Date</type>
</CustomField>