unpackaged/main/default/objects/Opportunity/fields/Loss_Due_to_Feature__c.field-meta.xml
<CustomField>
    <fullName>Loss_Due_to_Feature__c</fullName>
    <description>Tracking closed lost information is a critical step in adapting our sales and marketing strategic, helping R&amp;D prioritize features to develop, and focus training efforts. This field is required when &quot;Feature&quot; is chosen as a Loss Reason.</description>
    <label>Lost Due to Feature</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Billing &amp; Invoicing</fullName>
            </value>
            <value>
                <fullName>Calendaring</fullName>
            </value>
            <value>
                <fullName>Calendar Rules</fullName>
            </value>
            <value>
                <fullName>Client Communications</fullName>
            </value>
            <value>
                <fullName>Client Intake</fullName>
            </value>
            <value>
                <fullName>Document Automation</fullName>
            </value>
            <value>
                <fullName>eSignature</fullName>
            </value>
            <value>
                <fullName>Expense Tracking</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Invoice Management</fullName>
            </value>
            <value>
                <fullName>Lead Management</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Surcharging</fullName>
            </value>
            <value>
                <fullName>Text Messaging</fullName>
            </value>
            <value>
                <fullName>Time Tracking</fullName>
            </value>
            <value>
                <fullName>User Experience</fullName>
            </value>
            <value>
                <fullName>Websites</fullName>
            </value>
            <value>
                <fullName>Workflow Automation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>