unpackaged/main/default/objects/Opportunity/fields/Lost_To__c.field-meta.xml
<CustomField>
    <fullName>Lost_To__c</fullName>
    <description>Tracking closed lost information is a critical step in adapting our sales and marketing strategic, helping R&amp;D prioritize features to develop, and focus training efforts. This field tracks whether we lost an Opportunity to a competitor, incumbent (current solution), or other/unknown. It is required when an Opportunity Stage is updated to &quot;Closed Lost.&quot;</description>
    <label>Lost To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Incumbent</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>