unpackaged/main/default/objects/Opportunity/fields/MC_GCLID__c.field-meta.xml
<CustomField>
    <fullName>MC_GCLID__c</fullName>
    <description>MC; R1811601</description>
    <formula>Account.MC_GCLID__c</formula>
    <label>GCLID</label>
    <type>Text</type>
</CustomField>