unpackaged/main/default/objects/Opportunity/fields/Merchant_App_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_App_ID__c</fullName>
    <label>Merchant App ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>